Version 1.1

* tesseroids now strictly follows the ANSI C standard
* 