@@ -1,4 +1,6 @@
 Version 1.1
 
 * tesseroids now strictly follows the ANSI C standard
-* 
+* tess2prism has a new flag --flatten to make the prism model by flattening the
+  tesseroids (1 degree = 111km) into cartesian coordinates (so that they can be
+  used with the prismg* programs)
